[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Images/background.png" type="Texture" id=1]
[ext_resource path="res://Playspace.gd" type="Script" id=2]
[ext_resource path="res://PreviewCard.gd" type="Script" id=3]
[ext_resource path="res://button_manager.gd" type="Script" id=4]
[ext_resource path="res://EndStats.gd" type="Script" id=5]
[ext_resource path="res://Assets/Fonts/arial.tres" type="DynamicFont" id=6]

[node name="Playspace" type="Node2D"]
script = ExtResource( 2 )

[node name="Cards" type="Node" parent="."]

[node name="Background" type="TextureRect" parent="."]
margin_right = 2048.0
margin_bottom = 1200.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRegions" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
PreviewCard = NodePath("../PreviewCard")

[node name="PreviewCard" type="TextureRect" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 874.0
margin_top = 800.0
margin_right = 1174.0
margin_bottom = 960.0
custom_fonts/font = ExtResource( 6 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndStats" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 6 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
cards = NodePath("../Cards")

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
